# llvm-pe

clang/lib/Basic/Targets/: AMDGPU.cpp
clang/lib/CodeGen/: CodeGenModule.cpp
clang/lib/Driver/: ToolChain.cpp
clang/test/CodeGen/: ms-string-literal-minsize-alignment.c
libunwind/test/: aix_vapi_signal_unwind.pass.cpp  aix_vapi_unw_resume.pass.cpp
lld/: CMakeLists.txt
lld/COFF/: Chunks.cpp  DLL.cpp  DriverUtils.cpp  Writer.cpp
lld/include/lld/Common/: DriverConfig.h.cmake
lld/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
lld/test/COFF/: allowbind-no-run.s  data-directory-count.s  header-size.s  imports.test  merge-bss-text-filealign1.test  tiny-flat-run.s
lld/tools/lld/: CMakeLists.txt  lld.cpp
lld/unittests/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/cmake/: config-ix.cmake
llvm/cmake/modules/: AddLLVM.cmake
llvm/docs/: AMDGPUUsage.rst
llvm/include/llvm/ADT/: GenericCycleInfo.h
llvm/include/llvm/IR/: IntrinsicsAMDGPU.td
llvm/lib/TargetParser/: AMDGPUTargetParser.cpp  TargetDataLayout.cpp
llvm/lib/Transforms/IPO/: MergeFunctions.cpp
llvm/lib/Transforms/Scalar/: Reassociate.cpp
llvm/lib/Transforms/Vectorize/: SLPVectorizer.cpp
llvm/test/CodeGen/AArch64/: sve-fixed-length-fp-to-int-sat.ll
llvm/test/CodeGen/AMDGPU/: amdgcn.bitcast.1024bit.gfx11.ll  amdgcn.bitcast.1024bit.gfx9.ll  amdgcn.bitcast.1024bit.si.ll  amdgcn.bitcast.1024bit.vi.ll  amdgcn.bitcast.512bit.gfx11.ll  amdgcn.bitcast.512bit.gfx9.ll  amdgcn.bitcast.512bit.si.ll  amdgcn.bitcast.512bit.vi.ll  bf16-gfx1010.ll  bf16-gfx11.ll  bf16-gfx1250.ll  bf16-gfx600.ll  bf16-gfx7.ll  bf16-gfx8.ll  bf16-gfx9.ll  memintrinsic-unroll-aligned.memcpy_p0_p0_sz2048.ll  memintrinsic-unroll.ll  (+19 more)
llvm/test/Other/: new-pm-defaults.ll  new-pm-thinlto-postlink-defaults.ll  new-pm-thinlto-postlink-pgo-defaults.ll  new-pm-thinlto-postlink-samplepgo-defaults.ll  new-pm-thinlto-prelink-defaults.ll  new-pm-thinlto-prelink-pgo-defaults.ll  new-pm-thinlto-prelink-samplepgo-defaults.ll
llvm/tools/llc/: llc.cpp
llvm/tools/llvm-reduce/: ReducerWorkItem.cpp
mlir/include/mlir-c/: Rewrite.h
mlir/test/CAPI/: rewrite.c
(+197 files in other folders)
